Switch to hyde default

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,22 +8,9 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
-    
-    <div class="icons-home">
-      <a aria-label="Send email" title="Send me a e-mail" href="mailto:{{site.email}}">
-           <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg>
-      </a>
-      <a aria-label="My Github" title="Show my projects" target="_blank" href="https://github.com/{{site.github_username}}">
-           <svg class="icon icon-github-alt"><use xlink:href="#icon-github-alt"></use></svg>
-      </a>
 
-      <a aria-label="My LinkedIn" title="Show my linkedin profile" target="_blank" href="https://www.linkedin.com/in/{{site.linkedin_public_url}}">
-           <svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg>
-      </a>
-     </div>
-    
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ "/" | relative_url }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -38,7 +25,10 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-      
+
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
