Revert "Merge pull request #1 from xitizzz/hyde-default"
This reverts commit b4607cbea3dce6ab424052d31d5ca57ef1c58575.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,13 @@
 <html lang="en-us">
 
   {% include head.html %}
-
+  {% include svg-icons.html %}
+  
   <body>
 
     {% include sidebar.html %}
 
+    
     <div class="content container">
       {{ content }}
     </div>
