--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,8 @@
         </a>
       </h2>
       <p class="lead">{{ site.description }}</p>
-      <p class="lead" href="https://kshitijshah.net/">Kshitij Shah</p>
-      <p class="lead" href="http://gerard.demelo.org/">Gerard de Melo</p>
+      <p><a href="https://kshitijshah.net/">Kshitij Shah</a></p>
+      <p><a href="http://gerard.demelo.org/">Gerard de Melo</a></p>
     </div>
     
     <nav class="sidebar-nav">
