--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,9 @@
         </a>
       </h2>
       <p class="lead">{{ site.description }}</p>
-      <p><a href="https://kshitijshah.net/">Kshitij Shah</a>
-        <a href="http://gerard.demelo.org/">\nGerard de Melo</a></p>
+      <p><a href="https://kshitijshah.net/">Kshitij Shah</a></p>
+      </br>
+      <a href="http://gerard.demelo.org/">\nGerard de Melo</a>
     </div>
     
     <nav class="sidebar-nav">
