--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,9 +7,7 @@
         </a>
       </h2>
       <p class="lead">{{ site.description }}</p>
-      <p><a href="https://kshitijshah.net/">Kshitij Shah</a></p>
-      </br>
-      <a href="http://gerard.demelo.org/">\nGerard de Melo</a>
+      <p><a href="https://kshitijshah.net/">Kshitij Shah</a>, <a href="http://gerard.demelo.org/">Gerard de Melo</a></p>
     </div>
     
     <nav class="sidebar-nav">
